--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ilearnx",
+  "name": "expensify-app",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/Beta-23/ilearnx.git",
+  "repository": "https://github.com/Beta-23/expensify-app.git",
   "author": "Al D",
   "license": "MIT",
   "scripts": {
