--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "3.7.2",
     "sass-loader": "^8.0.2",
     "style-loader": "1.2.1",
+    "uuid": "3.3.2",
     "validator": "8.0.0",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0",
