--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
+    "react-dates": "^21.8.0",
     "react-dom": "16.13.1",
     "react-modal": "2.2.2",
     "react-redux": "^7.2.0",
