--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "3.5.3",
+    "elliptic": "^6.5.3",
     "live-server": "^1.2.1",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
