--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
     "presets": [
-        "env", 
+        "env",
         "react"
     ],
     "plugins": [
         "transform-class-properties",
         "transform-object-rest-spread"
+    ],
+    "test": [
+        "jest"
     ]
 }
