--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"babel-preset-react": "6.24.1",
 		"css-loader": "3.5.3",
 		"elliptic": "^6.5.3",
-		"jest": "^26.2.2",
+		"jest": "20.0.4",
 		"live-server": "^1.2.1",
 		"lodash": "^4.17.19",
 		"moment": "^2.27.0",
