--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"live-server": "^1.2.1",
 		"lodash": "^4.17.19",
 		"moment": "^2.27.0",
+		"node-fetch": "^2.6.1",
 		"node-forge": "^0.10.0",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
