--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-modal": "2.2.2",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
+		"react-test-renderer": "16.0.0",
 		"redux": "3.7.2",
 		"sass-loader": "^8.0.2",
 		"style-loader": "1.2.1",
