--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
 		"babel-preset-react": "6.24.1",
 		"css-loader": "3.5.3",
 		"elliptic": "^6.5.3",
+		"enzyme": "3.0.0",
+		"enzyme-adapter-react-16": "^1.15.5",
 		"jest": "20.0.4",
 		"live-server": "^1.2.1",
 		"lodash": "^4.17.19",
 		"moment": "^2.27.0",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
+		"raf": "3.3.2",
 		"react": "16.13.1",
 		"react-addons-shallow-compare": "^15.6.2",
 		"react-dates": "^21.8.0",
