--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"elliptic": "^6.5.3",
 		"enzyme": "3.0.0",
 		"enzyme-adapter-react-16": "^1.15.5",
+		"enzyme-to-json": "3.0.1",
 		"jest": "20.0.4",
 		"live-server": "^1.2.1",
 		"lodash": "^4.17.19",
