--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"react": "16.0.0",
 		"react-addons-shallow-compare": "^15.6.2",
 		"react-dates": "^21.8.0",
-		"react-dom": "16.0.0",
+		"react-dom": "^16.0.1",
 		"react-modal": "2.2.2",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
