--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
 		"raf": "3.3.2",
-		"react": "16.0.0",
+		"react": "^16.0.1",
 		"react-addons-shallow-compare": "^15.6.2",
 		"react-dates": "^21.8.0",
 		"react-dom": "^16.0.1",
