Test should set note on textarea change

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
-    "snapshotSerializers": [
-        "enzyme-to-json/serializer"
+    "setupFiles": [
+        "raf/polyfill",
+        "<rootDir>/src/tests/setupTests.js"
     ]
 }
