--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"enzyme": "3.0.0",
 		"enzyme-adapter-react-16": "^1.15.5",
 		"enzyme-to-json": "3.0.1",
+		"ini": "^1.3.7",
 		"jest": "20.0.4",
 		"live-server": "^1.2.1",
 		"lodash": "^4.17.19",
