--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"enzyme": "3.0.0",
 		"enzyme-adapter-react-16": "^1.15.5",
 		"enzyme-to-json": "3.0.1",
-		"extract-text-webpack-plugin": "3.0.0",
+		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"ini": "^1.3.7",
 		"jest": "20.0.4",
 		"live-server": "^1.2.1",
