--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
-		"test": "jest --config=jest.config.json"
+		"test": "jest --config=jest.config.json",
+		"start": "node server/server.js"
 	},
 	"dependencies": {
 		"babel-cli": "6.24.1",
