--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 	"author": "Al D",
 	"license": "MIT",
 	"scripts": {
-		"server": "live-server public/",
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
@@ -24,14 +23,9 @@
 		"babel-preset-react": "6.24.1",
 		"css-loader": "3.5.3",
 		"elliptic": "^6.5.3",
-		"enzyme": "3.0.0",
-		"enzyme-adapter-react-16": "^1.15.5",
-		"enzyme-to-json": "3.0.1",
 		"express": "4.15.4",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"ini": "^1.3.7",
-		"jest": "20.0.4",
-		"live-server": "^1.2.1",
 		"lodash": "^4.17.19",
 		"moment": "^2.27.0",
 		"node-fetch": "^2.6.1",
@@ -46,17 +40,20 @@
 		"react-modal": "2.2.2",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-test-renderer": "16.0.0",
 		"redux": "3.7.2",
 		"sass-loader": "^8.0.2",
 		"style-loader": "1.2.1",
 		"uuid": "3.3.2",
 		"validator": "8.0.0",
 		"webpack": "^4.43.0",
-		"webpack-dev-server": "^3.11.0",
 		"websocket-extensions": "^0.1.4"
 	},
 	"devDependencies": {
-		"webpack-cli": "^3.3.11"
+		"enzyme": "3.0.0",
+		"enzyme-adapter-react-16": "^1.15.5",
+		"enzyme-to-json": "3.0.1",
+		"jest": "20.0.4",
+		"react-test-renderer": "16.0.0",
+		"webpack-dev-server": "^3.11.0"
 	}
 }
