--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
-		"dev-server": "webpack serve",
+		"dev-server": "webpack-dev-server",
 		"test": "jest --config=jest.config.json",
 		"start": "node server/server.js",
 		"heroku-postbuild": "yarn run build:prod"
@@ -26,10 +26,12 @@
 		"express": "4.15.4",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"ini": "^1.3.7",
+		"install": "^0.13.0",
 		"lodash": "^4.17.19",
 		"moment": "^2.27.0",
 		"node-fetch": "^2.6.1",
 		"node-forge": "^0.10.0",
+		"node-notifier": "^8.0.1",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
 		"raf": "3.3.2",
@@ -45,7 +47,7 @@
 		"style-loader": "1.2.1",
 		"uuid": "3.3.2",
 		"validator": "8.0.0",
-		"webpack": "^4.43.0",
+		"webpack": "3.11.0",
 		"websocket-extensions": "^0.1.4"
 	},
 	"devDependencies": {
@@ -54,7 +56,6 @@
 		"enzyme-to-json": "3.0.1",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0",
-		"webpack-cli": "^4.2.0",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-dev-server": "2.5.1"
 	}
 }
