--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"ini": "^1.3.7",
 		"install": "^0.13.0",
 		"lodash": "^4.17.19",
+		"mem": "^4.0.0",
 		"moment": "^2.27.0",
 		"node-fetch": "^2.6.1",
 		"node-forge": "^0.10.0",
