--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"uuid": "3.3.2",
 		"validator": "8.0.0",
 		"webpack": "3.11.0",
-		"websocket-extensions": "^0.1.4"
+		"websocket-extensions": "^0.1.4",
+		"yargs-parser": "^13.1.2"
 	},
 	"devDependencies": {
 		"enzyme": "3.0.0",
