--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"install": "^0.13.0",
 		"lodash": "^4.17.19",
 		"mem": "^4.0.0",
+		"merge": "^2.1.1",
 		"moment": "^2.27.0",
 		"node-fetch": "^2.6.1",
 		"node-forge": "^0.10.0",
