--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"node-notifier": "^8.0.1",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
+		"postcss": "^8.2.10",
 		"raf": "3.3.2",
 		"react": "^16.0.1",
 		"react-addons-shallow-compare": "^15.6.2",
