--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"redux": "3.7.2",
 		"sass-loader": "^8.0.2",
 		"style-loader": "1.2.1",
+		"trim-newlines": "^3.0.1",
 		"uuid": "3.3.2",
 		"validator": "8.0.0",
 		"webpack": "3.11.0",
