--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"elliptic": "^6.5.4",
 		"express": "4.15.4",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"fresh": "^0.5.2",
 		"ini": "^1.3.7",
 		"install": "^0.13.0",
 		"lodash": "^4.17.19",
