--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"lodash": "^4.17.19",
 		"mem": "^4.0.0",
 		"merge": "^2.1.1",
+		"mime": "^1.4.1",
 		"moment": "^2.27.0",
 		"node-fetch": "^2.6.1",
 		"node-forge": "^0.10.0",
