--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "1.5.2",
 		"babel-preset-react": "6.24.1",
+		"braces": "^2.3.1",
 		"browserslist": "^4.16.5",
 		"css-loader": "3.5.3",
 		"debug": "^2.6.9",
