--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"express": "4.15.4",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"fresh": "^0.5.2",
+		"glob-parent": "^5.1.2",
 		"ini": "^1.3.7",
 		"install": "^0.13.0",
 		"lodash": "^4.17.19",
