--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"braces": "^2.3.1",
 		"browserslist": "^4.16.5",
 		"css-loader": "3.5.3",
+		"css-what": "^5.0.1",
 		"debug": "^2.6.9",
 		"elliptic": "^6.5.4",
 		"express": "^4.17.1",
